@@ -31,7 +31,7 @@
 				<Reference type="Gac" refto="System.Xml, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
 			</References>
 			<Files>
-				<AspNetFile name="Default.aspx">
+				<AspNetFile name="Default.aspx" BuildAction="FileCopy">
 					<FileText>
 						<![CDATA[<%@ Page Language="${Language}" Inherits="${Namespace}.${Name}" %>
 ${Doctype}
