@@ -1,3 +1,8 @@
+2007-08-31  Ankit Jain  <jankit@novell.com>
+
+	* Templates/WebApplication.xpt.xml: Set BuildAction for aspx file to
+	FileCopy.
+
 2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* AspNetAddIn.addin.xml, AspNetAddIn.mdp, Makefile.am: Reorganized the
