@@ -1,3 +1,8 @@
+2007-08-31  Ankit Jain  <jankit@novell.com>
+
+	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs (Load): Add
+	support for a 'BuildAction' attribute.
+
 2007-08-28  Mike Krüger <mkrueger@novell.com> 
 
 	* MonoDevelop.Ide.Gui/AbstractBaseViewContent.cs,
